syntax = "proto3";

// Package internal holds protobuf types used by the server.
package internal;

option go_package = "github.com/dexidp/dex/server/internal";

// RefreshToken is a message that holds refresh token data used by dex.
message RefreshToken {
  string refresh_id = 1;
  string token = 2;
}

// IDTokenSubject represents both the userID and connID which is returned
// as the "sub" claim in the ID Token.
message IDTokenSubject {
  string user_id = 1;
  string conn_id = 2;
}
